# api/controllers/profile.js
@@ -5,7 +5,7 @@ const services = require('../services/profile');
 const { publicProfileValidate } = require('../validation/profile');
 
 const getProfile = async (req, res) => {
-  const response = await services.getProfile(req.headers.token);
+  const response = await services.getProfile(req.headers.authorization);
   res.status(200).send(response);
 };
 
